compiler/test/fail_compilation/fail22853a.i
/+ https://issues.dlang.org/show_bug.cgi?id=22853 +/
/*
REQUIRED_ARGS: -strictC
TEST_OUTPUT:
---
fail_compilation/fail22853a.i(1): Error: no type for declarator before `/`
---
*/
